--- a/app/views/home/about.html
+++ b/app/views/home/about.html
@@ -2,11 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="http://css.cdn.tl/normalize.css" />
     <style type="text/css">
         body {
             margin: 200px auto;
-            width: 300px;
+            width: 500px;
+        }
+        pre {
+            font-family: monospace;
+            font-size: 21px;
+            text-align: center;
         }
     </style>
     <title>cui-about.me</title>
