bold title at about.text

--- a/app/views/home/about.text.erb
+++ b/app/views/home/about.text.erb
@@ -1,7 +1,7 @@
-NAME
+<%= 'NAME'.bold %>
        cui-about.me -- The hackers' profile downloader for your terminal
 
-COMMANDS
+<%= 'DESCRIPTION'.bold %>
        curl http://cui-about.me/
               Prints how to use this service.
 
@@ -23,8 +23,8 @@ COMMANDS
        curl -X DELETE -d 'password=[password]' http://cui-about.me/[yourname]
               Delete your profile. Password is required.
 
-SEE ALSO
+<%= 'SEE ALSO'.bold %>
        Github: http://github.com/naoty/cui-aboutme
 
-AUTHOR
+<%= 'AUTHOR'.bold %>
        naoty -- curl http://cui-about.me/naoty
