update README.md and about.text

--- a/app/views/home/about.text.erb
+++ b/app/views/home/about.text.erb
@@ -11,6 +11,9 @@
        curl http://cui-about.me/[username]
               Prints a user's profile.
 
+       curl http://cui-about.me/[username]/man
+              Prints a user's profile like man.
+
        curl http://cui-about.me/[username]/[item]
               Prints a specific item of a user's profile.
 
