hide summary and description at users#show

--- a/app/views/home/about.text.erb
+++ b/app/views/home/about.text.erb
@@ -28,6 +28,7 @@
 
 <%= 'SEE ALSO'.bold %>
        Github: http://github.com/naoty/cui-aboutme
+       Github page: http://naoty.github.com/cui-aboutme
 
 <%= 'AUTHOR'.bold %>
        naoty -- curl http://cui-about.me/naoty
