Show summary next to name

--- a/app/views/users/show.text.erb
+++ b/app/views/users/show.text.erb
@@ -1,4 +1,7 @@
 name = <%= @user.name %>
+<% if @user.summary -%>
+summary = <%= @user.summary %>
+<% end -%>
 <% @user.items.each do |f, v| -%>
 <% if v.present? -%>
 <%= f %> = <%= v %>
